<resources>
    <string name="app_name">ImmoPro</string>
    <string name="app_subtitle">Votre agent immobilier de poche</string>

    <string name="language">Changer de langue</string>

    <string name="votre_email">Votre email</string>
    <string name="mot_de_passe">Mot de passe</string>
    <string name="confirmation_du_mot_de_passe">Confirmation du mot de passe</string>
    <string name="immopro_nvote_agent_immobilier_de_poche">ImmoPro \n Votre agent immobilier de poche.</string>
    <string name="nom_complet">Nom complet</string>
    <string name="d_connecter_votre_compte">Déconnecter votre compte</string>
    <string name="supprimer_votre_compte">Supprimer votre compte</string>
    <string name="edit_profil">Editer le profil</string>
    <string name="ajouter_un_post">Ajouter une publication</string>
    <string name="votre_commentaire">Votre commentaire</string>

    <string name="nombre_vue">%s Vue</string>
    <string name="nombre_vues">%s Vues</string>
    <string name="nombre_like">%s J\'aime</string>
    <string name="nombre_likes">%s J\'aimes</string>
    <string name="nombre_comment">%s Commentaire</string>
    <string name="nombre_comments">%s Commentaires</string>
    <string name="note_post">%s/20</string>
    <string name="signalement_post">%s Signalement</string>
    <string name="signalements_post">%s Signalements</string>
    <string name="nombre_share">%s Partage</string>
    <string name="nombre_shares">%s Partages</string>
    <string name="show_description_from_another_app">Description : \n%1$s</string>

    <string name="email">email</string>
    <string name="userQuality">userQuality</string>
    <string name="gallery_notifications">Gallerie</string>
    <string name="search">Recherche</string>
    <string name="settings">Paramètres</string>
    <string name="post_notifications">Publication</string>
    <string name="comment_notifications">Commentaires</string>
    <string name="d_vise">Dévise</string>
    <string name="t_l_phone">Téléphone</string>

    <string name="signature">Exper\'immo - by DEONE - 2020</string>

    <!-- TODO: Remove or change this placeholder text -->

    <string name="hello_blank_fragment">Bonjour fragment vierge</string>

    <string name="todo_submit_profil">TODO SOUMETTRE LE PROFIL</string>
    <string name="todo_email_fab">TODO EMAIL FAB</string>
    <string name="todo_like">TODO J\'AIME</string>
    <string name="todo_favorite">TODO FAVORIE</string>
    <string name="todo_share">TODO PARTAGE</string>
    <string name="todo_note">TODO NOTE</string>
    <string name="todo_toolbar_image">TODO IMAGE DE LA BARRE D\'OUTILS</string>
    <string name="todo_create_post">TODO CREER UN POST</string>
    <string name="todo_cover_post_item">TODO COUVERTURE DE POSTE</string>

    <string name="francais">Français</string>
    <string name="anglais">Anglais</string>
    <string name="langue">Langue</string>
    <string name="votre_t_l_phone">Votre téléphone</string>
    <string name="informations_personnelles">Informations personnelles</string>
    <string name="select_language">Sélectionnez une langue</string>
    <string name="pick_image">Choisir une image</string>
    <string name="camera">Caméra</string>
    <string name="gallery">Galerie</string>
    <string name="notifications">Notifications</string>
    <string name="search_head">Bienvenue sur l\'interface de recherche d\'une publication.\nPour que vous puissiez avoir des reponses pertinentes, il faudrait que les champs de saisies suivants soient bien remplis.</string>
    <string name="ex_terrain_vendre">Ex : Terrain à vendre</string>
    <string name="ex_bastos">Ex : Bastos</string>
    <string name="post_description">Description: 1S+2C+1D+1C\nQuartier: Bastos\nPrix: 25000 XFA\netc…</string>
    <string name="titre_du_post">Titre de la publication</string>
    <string name="rendre_ce_post_public">Rendre publique cette publication ?</string>
    <string name="votre_budget">Quel est votre budget ?</string>
    <string name="dans_quelle_localit">Dans quelle localité ?</string>
    <string name="que_cherchez_vous">Que cherchez-vous ?</string>
    <string name="recherche_de_publication">Recherche de publication</string>
    <string name="toast_que_cherchez_vous">Vous devez indiquer ce que vous cherchez</string>
    <string name="toast_ou_cherchez_vous">Vous devez indiquer la localité de votre recherche</string>
    <string name="toast_votre_budget">Vous devez indique votre budget</string>
    <string name="y_a_t_il_une_cheance_cette_recherche">Y a t\'il une écheance à cette recherche ?</string>
    <string name="echeance_search">Echéance le : %s/%s/%s</string>

    <string name="toast_images_updated">Images mises à jour…</string>
    <string name="toast_error_updating_images">Erreur lors de la mise à jour des images…</string>
    <string name="toast_some_error_occured">Une erreur est survenue</string>
    <string name="toast_updated_phone">Mise à jour du numéro de téléphone</string>

    <string name="votre_nom_complet">Votre nom complet</string>
    <string name="votre_devise">Votre dévise</string>
    <string name="champ_vide">Ce champ ne doit pas etre vide!</string>

    <string name="edit_avatar">Editer l\'avatar</string>
    <string name="edit_username">Editer le nom</string>
    <string name="edit_user_phone">Editer le téléphone</string>
    <string name="edit_slogan">Editer la dévise</string>
    <string name="updating_avatar">Mise à jour de l\'avatar</string>
    <string name="updating_username">Mise à jour du nom de l\'utilisateur</string>
    <string name="updating_userphone">Mise à jour du téléphone</string>
    <string name="updating_userslogan">Mise à jour de la dévise</string>
    <string name="receive_notification">Vous allez recevoir de notifications</string>
    <string name="unsubscription_failed">Unsubscription failed</string>
    <string name="subscription_failed">Subscription failed</string>
    <string name="not_receive_notification">Vous n\'allez plus recevoir de notifications</string>
    <string name="verification_deconnexion">Etes-vous sur de vouloir déconnecter votre compte ?</string>
    <string name="deconnexion">Déconnexion</string>
    <string name="not_delete_account">Impossible de supprimer ce compte</string>
    <string name="supprimer_compte">Etes-vous sur de vouloir supprimer votre compte ?\nNB : Cette action supprimera de manière définitive toutes vos informations personnelles.</string>
    <string name="clear_your_account">Suppression de compte</string>
    <string name="update_user_information">Update User informations</string>
    <string name="storage_permission">Please enable storage permissions.</string>
    <string name="camera_permission">Please enable camera et storage permissions.</string>
    <string name="notif_add_image">" a ajouté une nouvelle image"</string>
    <string name="operation_reussie">"Opération réussie"</string>
    <string name="location_permission">Please enable location permissions.</string>
    <string name="ajouter_une_image">Ajouter une image</string>
    <string name="administration">Administration</string>
    <string name="vues">Vues</string>
    <string name="d_connexion_du_compte">Déconnexion du compte</string>
    <string name="supprimer_le_compte">Supprimer le compte</string>
    <string name="visitors_blocked">Visiteurs bloqués</string>

</resources>