<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/menu_search"
        android:icon="@drawable/ic_menu_search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView"
        android:title="@string/search" />

    <item  android:id="@+id/menu_add_operation"
        android:title= "@string/ajouter_un_post"
        android:icon="@drawable/ic_menu_add_post"
        app:showAsAction="withText"/>

    <item  android:id="@+id/menu_add_image"
        android:title= "@string/ajouter_une_image"
        android:icon="@drawable/ic_menu_settings"
        android:visible="false"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/menu_show_vues"
        android:title="@string/vues"
        android:visible="false"
        app:actionLayout="@layout/menu_item_vues"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_show_comments"
        android:title="@string/comment_notifications"
        android:visible="false"
        app:actionLayout="@layout/menu_item_comments"
        app:showAsAction="ifRoom" />

    <item  android:id="@+id/menu_show_settings"
        android:title= "@string/settings"
        android:icon="@drawable/ic_menu_settings"
        app:showAsAction="withText"/>

</menu>