<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:background="@color/fond_ecran"
    tools:context=".ProfilActivity">

    <com.blogspot.atifsoftwares.circularimageview.CircularImageView
        android:id="@+id/avatarIv"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:elevation="20dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/ic_user"
        android:layout_marginBottom="10dp" />


    <EditText
        android:id="@+id/fullNameEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/avatarIv"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:elevation="20dp"
        android:hint="@string/nom_complet"
        android:inputType="textCapSentences"
        android:padding="20dp"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/phoneEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fullNameEt"
        android:elevation="20dp"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:hint="@string/t_l_phone"
        android:inputType="number"
        android:padding="20dp"
        android:importantForAutofill="no"
        tools:ignore="TextFields" />

    <EditText
        android:id="@+id/deviseEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/phoneEt"
        android:elevation="20dp"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:hint="@string/d_vise"
        android:inputType="textCapSentences"
        android:padding="20dp"
        android:importantForAutofill="no" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/profilFab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="30dp"
        android:src="@drawable/ic_done"
        android:contentDescription="@string/todo_submit_profil" />

</RelativeLayout>