<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PostSettingsActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentTop="true"
        android:background="@color/purple_200"
        app:subtitleTextColor="@color/white"
        app:titleTextColor="@color/white" />

    <RelativeLayout
        android:id="@+id/rlNotification"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:padding="5dp">

        <TextView
            android:id="@+id/notificationInfoTv"
            android:layout_marginStart="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/notifications"/>

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/commentNotificationSw"
            android:layout_below="@+id/notificationInfoTv"
            android:layout_marginStart="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/comment_notifications"
            android:textStyle="bold"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/galleryNotificationSw"
            android:layout_below="@+id/commentNotificationSw"
            android:layout_toEndOf="@+id/rubanNotificationRl"
            android:layout_marginStart="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gallery_notifications"
            android:textStyle="bold"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rlLike"
        android:layout_below="@+id/rlNotification"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp">

        <TextView
            android:id="@+id/likesTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="Activités"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/activitesRv"
            android:layout_marginStart="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/item_not_parent"
            android:layout_below="@+id/likesTv"/>

    </RelativeLayout>

</RelativeLayout>