<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.HomeFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@color/purple_200"
        app:subtitleTextColor="@color/white"
        app:titleTextColor="@color/white" />

    <TextView
        android:id="@+id/postTitreTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:textColor="@color/black"
        android:padding="10dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="Titre du post" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/postImagesRv"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:layout_height="300dp"
        tools:listitem="@layout/item_gallery"
        android:layout_below="@+id/postTitreTv"/>

    <TextView
        android:id="@+id/postDescriptionETv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/postImagesRv"
        android:background="@color/white"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:gravity="top"
        android:minHeight="200dp"
        android:text="Description du post"
        android:layout_above="@+id/footerPost"
        android:padding="10dp" />

    <LinearLayout
        android:id="@+id/footerPost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:padding="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/vueTv"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:text="5 Vues"
            android:ellipsize="end"
            android:maxLines="1"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:background="@null"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/likeTv"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:text="5 Likes"
            android:ellipsize="end"
            android:maxLines="1"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:background="@null"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/commentTv"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:text="5 Comments"
            android:ellipsize="end"
            android:maxLines="1"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:background="@null"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/noteTv"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:text="0/20"
            android:ellipsize="end"
            android:maxLines="1"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:background="@null"
            android:layout_height="wrap_content" />

        <ImageButton
            android:id="@+id/likeIb"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:src="@drawable/ic_no_like"
            android:background="@null"
            android:layout_height="wrap_content"
            android:contentDescription="@string/todo_like" />

        <ImageButton
            android:id="@+id/favoriteIb"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:src="@drawable/ic_no_favorite"
            android:background="@null"
            android:layout_height="wrap_content"
            android:contentDescription="@string/todo_favorite" />

        <ImageButton
            android:id="@+id/noteIb"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:src="@drawable/ic_note"
            android:background="@null"
            android:layout_height="wrap_content"
            android:contentDescription="@string/todo_note" />

        <ImageButton
            android:id="@+id/shareIb"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:src="@drawable/ic_share"
            android:background="@null"
            android:layout_height="wrap_content"
            android:contentDescription="@string/todo_share" />

    </LinearLayout>



</RelativeLayout>